phase2_Dev/src/objects/Licensing_Transaction__c.object
<CustomObject>
    <description>Licenses object is used to manage license applications and provisional and full licenses.</description>
    <fields>
        <fullName>Abused_or_neglected_a_child_Description__c</fullName>
        <label>Abused or neglected child Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Abused_or_neglected_a_child__c</fullName>
        <label>Abused or neglected child</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounts_Responsible__c</fullName>
        <label>Accounts Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_admin_for_funding_source__c</fullName>
        <description>Address of contract admin for funding source</description>
        <inlineHelpText>Address of contract admin for funding source</inlineHelpText>
        <label>Address of admin for funding source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Civil_criminal_action_last_5_years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the applicant or its officers had administrative, civil or criminal action brought with respect to the provision of child care services during the five years prior to the date of application?</description>
        <inlineHelpText>Has the applicant or its officers had administrative, civil or criminal action brought with respect to the provision of child care services during the five years prior to the date of application?</inlineHelpText>
        <label>Admin/Civil/criminal action last 5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Civil_criminal_action_last_5_yrs1__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Admin Civil criminal action last 5 years</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alcoholic_Bev_Narcotics_Drugs_Desc__c</fullName>
        <label>Alcoholic Bev., Narcotics, Drugs Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Variances_Have_Decisions__c</fullName>
        <formula>Total_Number_of_Variance__c  =  Total_Number_of_Variance_With_Decision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Variances Have Decisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Variances_Have_Explanations__c</fullName>
        <formula>Total_Number_of_Variance__c  =  Total_Number_of_Variance_With_Explanatio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Variances Have Explanations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Variances_Have_Recommendations__c</fullName>
        <formula>Total_Number_of_Variance__c  =  Total_Number_of_Variance_With_Reco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Variances Have Recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applying_to_be_approv_or_cert_as_a__c</fullName>
        <label>Applying to be approv. or cert. as a</label>
        <picklist>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Foster_Care_Provider_Descrip__c</fullName>
        <label>Approved Foster Care Provider Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Foster_Care_Provider__c</fullName>
        <label>Approved Foster Care Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked if the transaction was reviewed and approved by the Manager of the transaction assignee</description>
        <label>Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asleep_Staff_to_child_ratio__c</fullName>
        <inlineHelpText>Format entered should be XXX:YYY where XXX and YYY is a number between 1 and 999.</inlineHelpText>
        <label>Asleep: Staff to child ratio</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager_Email__c</fullName>
        <inlineHelpText>Email of the manager of the user assigned to the transaction (used in the approval process)</inlineHelpText>
        <label>Assigned To Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Phone__c</fullName>
        <formula>Assigned_To__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licensing_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Email__c</fullName>
        <description>Email address for the record&apos;s assigned user. Will be updated via a field update every time the record is updated and/or created</description>
        <inlineHelpText>Email address for the record&apos;s assigned user</inlineHelpText>
        <label>Assigned User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me_Or_Subordinates__c</fullName>
        <description>Used in report to filter on my Transactions and the ones of my team. Used for Supervisor dashboard</description>
        <formula>OR( Assigned_to_Me__c ,
 Assigned_To__r.ManagerId =  $User.Id ,
  Assigned_To__r.Manager.ManagerId =  $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me Or Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>This flag is used in reports to identify &quot;My&quot; transactions</description>
        <formula>$User.Id =  Assigned_To__c</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Fee__c</fullName>
        <label>Associated Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_Least_2_Exits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Least 2 Exits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachments_Returned_for_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments Returned for Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Days_Afternoon_program__c</fullName>
        <description>Available days when afternoon program is operating.</description>
        <label>Available Days (Afternoon program)</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_Days_Full_day_program__c</fullName>
        <description>Days when full day program is operative.</description>
        <label>Available Days (Full day program)</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_Days_Morning_program__c</fullName>
        <description>Days when half day morning program is operative.</description>
        <label>Available Days (Morning program)</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Awake_Staff_to_child_ratio__c</fullName>
        <label>Awake: Staff to child ratio</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_1__c</fullName>
        <label>BRC City 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_2__c</fullName>
        <label>BRC City 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_3__c</fullName>
        <label>BRC City 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Current_Mailing_Address__c</fullName>
        <label>BRC Current Mailing Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_1__c</fullName>
        <label>BRC Date From 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_2__c</fullName>
        <label>BRC Date From 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_3__c</fullName>
        <label>BRC Date From 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_1__c</fullName>
        <label>BRC Date To 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_2__c</fullName>
        <label>BRC Date To 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_3__c</fullName>
        <label>BRC Date To 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_of_Birth__c</fullName>
        <label>BRC Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Father_First_Name__c</fullName>
        <label>BRC Father First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Father_Last_Name__c</fullName>
        <label>BRC Father Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_First_Name__c</fullName>
        <label>BRC First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Gender__c</fullName>
        <label>BRC Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BRC_Last_Name__c</fullName>
        <label>BRC Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Maiden_Name__c</fullName>
        <label>BRC Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Middle_Name__c</fullName>
        <inlineHelpText>Middle name as filled in BRC</inlineHelpText>
        <label>BRC Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_First_Name__c</fullName>
        <label>BRC Mother First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_Last_Name__c</fullName>
        <label>BRC Mother Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_Maiden_Name__c</fullName>
        <label>BRC Mother Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Never_Had_SSN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRC Never Had SSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRC_Not_Renewal_Flag_For_DocuSign__c</fullName>
        <formula>IF( RecordType.Name = &quot;FCC Renewal&quot;, &quot;&quot;, &quot;X&quot;)</formula>
        <label>BRC Not Renewal Flag For DocuSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_1__c</fullName>
        <label>BRC Number Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_2__c</fullName>
        <label>BRC Number Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_3__c</fullName>
        <label>BRC Number Street 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Other_Addresses__c</fullName>
        <label>BRC Other Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRC_Place_of_Birth__c</fullName>
        <label>BRC Place of Birth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Renewal_Flag_For_DocuSign__c</fullName>
        <formula>IF( RecordType.Name = &quot;FCC Renewal&quot;, &quot;X&quot;, &quot;&quot;)</formula>
        <label>BRC Renewal Flag For DocuSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Renewal__c</fullName>
        <label>BRC Renewal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Result__c</fullName>
        <formula>IF( OR( ISPICKVAL(Licensee_CORI_Result__c, &quot;Denied&quot;), ISPICKVAL(Licensee_DCF_Result__c, &quot;Denied&quot;), ISPICKVAL(SORI_Result__c , &quot;Denied&quot;),  HH_Member_with_CORI_Denied__c &gt;=1,  HH_Member_with_DCF_Denied__c &gt;= 1 ), &quot;Denied BRC&quot;, &quot;OK&quot;)</formula>
        <label>BRC Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_SSN_Last_Six_Digits_2__c</fullName>
        <label>BRC SSN Last Six Digits (2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_SSN_Last_Six_Digits_4__c</fullName>
        <label>BRC SSN Last Six Digits (4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_1__c</fullName>
        <label>BRC State 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_2__c</fullName>
        <label>BRC State 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_3__c</fullName>
        <label>BRC State 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Suffix__c</fullName>
        <label>BRC Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_1__c</fullName>
        <label>BRC Zip 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_2__c</fullName>
        <label>BRC Zip 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_3__c</fullName>
        <label>BRC Zip 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Becoming_Foster_Care_Provider_Descrip__c</fullName>
        <label>Becoming Foster Care Provider Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Becoming_Foster_Care_Provider__c</fullName>
        <label>Becoming Foster Care Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Belong_to_Food_Program__c</fullName>
        <label>Belong to Food Program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_mothers_making_adoption_plans__c</fullName>
        <description>Number of birth mothers making adoption plans</description>
        <inlineHelpText>Number of birth mothers making adoption plans</inlineHelpText>
        <label>Birth mothers making adoption plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Codes_c__c</fullName>
        <label>Building Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist values awaited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Code #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Code #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Code #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Code #4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Building_Inspection_Max_Capacity__c</fullName>
        <inlineHelpText>Maximum Building Capacity as mentioned during Building Inspection</inlineHelpText>
        <label>Building Inspection Max Capacity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_inspection_expiration_Date__c</fullName>
        <description>Building inspection expiration Date</description>
        <label>Building inspection expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bus_Operated_Out_of_Own_Home_Descrip__c</fullName>
        <label>Bus.Operated Out of Own Home Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Operated_Out_of_Own_Home__c</fullName>
        <label>Business Operated Out of Own Home</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>By_whom__c</fullName>
        <description>Massachusetts agency that has approved this program</description>
        <inlineHelpText>Massachusetts agency that has approved this program</inlineHelpText>
        <label>By whom?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the CPR Certificate has been uploaded.</inlineHelpText>
        <label>CPR Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPR_Certification_Issue_Date__c</fullName>
        <label>CPR Certification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPR_Certified__c</fullName>
        <label>CPR Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cafeteria_Used_During_Program_Hours1__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Cafeteria Used During Program Hours1</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Camp_Permit_Issue_Date__c</fullName>
        <description>Camp Permit Issue Date</description>
        <label>Camp Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring_For_Children_Not_Related__c</fullName>
        <label>Caring For Children Not Related</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caring_for_other_peoples_children_Hr_Wk__c</fullName>
        <inlineHelpText>Caring for other people’s children in your home with a valid license (Daycare center/nursery school) - Hours per Week</inlineHelpText>
        <label>Other Children -Daycare/Nursery - Hrs/Wk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring_for_other_peoples_children_Month__c</fullName>
        <inlineHelpText>Caring for other people’s children in your home with a valid license (Daycare center/nursery school) - Months</inlineHelpText>
        <label>Other Children -Daycare/Nursery - Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring_for_other_peoples_children_Years__c</fullName>
        <inlineHelpText>Caring for other people’s children in your home with a valid license (Daycare center/nursery school) - Years</inlineHelpText>
        <label>Other Children -Daycare/Nursery - Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring_for_your_own_children_Hrs_Week__c</fullName>
        <inlineHelpText>Hours per week of caring for your own children</inlineHelpText>
        <label>Caring for your own children - Hrs/Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring_for_your_own_children_Months__c</fullName>
        <inlineHelpText>Months of caring for your own children</inlineHelpText>
        <label>Caring for your own children - Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring_for_your_own_children_Years__c</fullName>
        <inlineHelpText>Years caring for your own children</inlineHelpText>
        <label>Caring for your own children - Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Granted__c</fullName>
        <inlineHelpText>Certificate that will be granted to this assistant</inlineHelpText>
        <label>Certificate Granted</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (10)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_of_License_Revoked_Suspend__c</fullName>
        <inlineHelpText>Certificate of License Revoked / Suspended</inlineHelpText>
        <label>Cert. of License Revoked / Suspended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_or_License_Surrendered__c</fullName>
        <label>Certificate or License Surrendered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Characteristics_of_children_served__c</fullName>
        <label>Characteristics of children served</label>
        <picklist>
            <picklistValues>
                <fullName>Autistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotionally Disturbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sex Offender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiply Handicapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Parenting Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire setting behaviors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuse reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBTQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medically Complex</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Charged_or_Arrested_for_Crime__c</fullName>
        <label>Charged or Arrested for Crime</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charges_Description__c</fullName>
        <label>Charges Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Checking_Provider_Record_Type_Name__c</fullName>
        <description>Temp field for testing....delete after testing</description>
        <formula>Provider__r.RecordType.Name</formula>
        <label>Checking Provider Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Emerg_Injury_Last_3_Years_Descrip__c</fullName>
        <inlineHelpText>Child Emergency / Injury Last 3 Years Description</inlineHelpText>
        <label>Child Emerg/Injury Last 3 Years Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Emergency_Injury_Last_3_Years__c</fullName>
        <label>Child Emergency / Injury Last 3 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Children_Home_Schooled_Description__c</fullName>
        <label>Children Home Schooled Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Children_Home_Schooled__c</fullName>
        <label>Children Home Schooled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Children_Records_Responsible__c</fullName>
        <label>Children&apos;s Records Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commute_to_offsite_play_location__c</fullName>
        <description>If program has an offsite outdoor play location, then how do they go there?</description>
        <label>Commute to offsite play location</label>
        <picklist>
            <picklistValues>
                <fullName>Walking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is checked when a condition has been added to the transaction</inlineHelpText>
        <label>Condition Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_Copied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Roles Copied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCF_Nb_Children_Placed_In_Care__c</fullName>
        <label>Number of Children Placed in Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Routine_and_Activities__c</fullName>
        <label>Daily Routine and Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Daily_activities_Responsible__c</fullName>
        <label>Daily activities Responsible</label>
        <length>64</length>
        <type>Text</type>
    </fields>
</CustomObject>